# canpi-server

./: .env  .gitignore  CHANGES.md  CMakeLists.txt  CTestTestfile.cmake  INSTALL.md  Makefile  README.md  canpi.epm  canpiConfig.cmake
cmake/: armv6-rpi-linux-gnueabihf.cmake  canpiTargets.cmake
cmake/modules/: Findlog4cpp.cmake
config/: 80-can.network  avahi.service.unit.conf  can0.conf  canpi-config-defn.json  canpi-server.service  canpi.cfg  canpi.service  canpiconfig.service  canpid.logrotate  canpid.service  multiple.service.in
package/: Makefile  bookwormtest  canpi-1.0.4-linux-5.15-armhf.deb  canpi-server.epm  canpi.epm
scripts/: canpidctl.bash  create_canpi_cfg.py  postinst  prerm  start_canpi.sh
src/: CMakeLists.txt  Client.h  Turnout.cpp  Turnout.h  canHandler.cpp  canHandler.h  edSession.cpp  edSession.h  gpio.cpp  gpio.h  main.cpp  nodeConfigurator.cpp  nodeConfigurator.h  opc_codes.cpp  opc_codes.h  sessionHandler.cpp  sessionHandler.h  tcpClient.cpp  tcpClient.h  tcpClientGridConnect.cpp  tcpClientGridConnect.h  utils.h
test/: CMakeLists.txt  canhandler_test.cpp
webserver/: canpiconfig.py
